--- a/app/components/history/index.html.slim
+++ b/app/components/history/index.html.slim
@@ -1,5 +1,4 @@
 html
   head
   body
-    / iframe src="file:///Users/ilo-robbie/Library/Application%20Support/WebBuddy/plugins/index.html#/filtering" width="100%" height="100%"
-    iframe src="http://bigbearlabs.com/research/staging/plugins/index.html#/filtering" width="100%" height="100%"
+    iframe src="http://localhost:59124/plugins/#/filtering" width="100%" height="100%"
